# codex-local

./: README.md  session-review.txt  speedtest.json
.codex-multi/: config.toml
codex-rs/apply-patch/src/: lib.rs
codex-rs/core/.codex-multi/: context_cache.json
codex-rs/core/src/: codex.rs  codex_tests.rs  compact.rs  compaction_loop_fixture.json  local_routing.rs  stream_events_utils.rs
codex-rs/routing/: Cargo.toml
codex-rs/routing/src/: classifier.rs  completion_verifier.rs  config.rs  content_reduce.rs  curl_ua.rs  engine.rs  failover.rs  ground_truth.rs  guard_state.rs  lib.rs  linter_probe.rs  local_coder_prompt.md  local_dispatch.rs  local_web_search.rs  loop_detector.rs  no_action_prompt.rs  ollama.rs  probe_classifier.rs  probe_discovery.rs  probe_parse.rs  probe_run.rs  project_config.rs  prompt_local.rs  quality.rs  reasoned_guidance.rs  rumination_detector.rs  tool_aliases.rs  tool_recovery.rs  usage.rs  web_fetch.rs
codex-rs/routing/src/compaction/: extract.rs  mod.rs  models.rs  normalize.rs  pipeline.rs
codex-rs/routing/src/trim/: items.rs  mod.rs  render.rs  signatures.rs  state_extract.rs  tests.rs
codex-rs/tools/src/: lib.rs  tool_registry_plan.rs  web_fetch_tool.rs
docs/spec/: compaction-reference.md  content-reduce.md  heuristic-assists.md  implementation-status.md  index.md  local-coder-massaging.md  local-model-services.md  model-settings.md  nudge-service.md  nudges.md  reasoned-guidance-refactor-GOAL.md  reasoned-guidance-refactor.md  routing-logic-reference.md  shephard.md  supervisor-integration.md
scripts/: review_rollout.py
(+24 files in other folders)
