[package]
name = "codex-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Task routing engine for multi-agent orchestration"

[lib]
name = "codex_routing"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
codex-protocol = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
